# mesos-external-container-logger

./: CMakeLists.txt  Dockerfile  Jenkinsfile  NOTICE  README.md  build-mesos.sh  compile.sh
examples/: filebeat-container-logger.sh  systemd-cat.sh
src/: lib_externallogger.cpp  lib_externallogger.hpp
